--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.26.0",
 		"uuid": "^10.0.0"
 	},
 	"devDependencies": {
@@ -39,4 +40,3 @@
 		"vitest": "^2.0.3"
 	}
 }
-
